# m8_2

hw8_2/: pyproject.toml
hw8_2/hw8_2/: consumer.py  model.py  producer.py
